--- a/Project/CMakeLists.txt
+++ b/Project/CMakeLists.txt
@@ -8,7 +8,8 @@ include_directories(/opt/vc/userland-master)
 include_directories(/opt/vc/userland-master/interface/vcos/pthreads)
 include_directories(/opt/vc/userland-master/interface/vmcs_host/linux)
 include_directories(/opt/vc/userland-master/host_applications/linux/libs/bcm_host/include)
-link_directories(/opt/vc/lib)
-add_executable(picam picam.cpp camera.cpp cameracontrol.cpp graphics.cpp lodepng.cpp)
 
+link_directories(/opt/vc/lib)
 target_link_libraries(picam libmmal_core.so libmmal_util.so libmmal_vc_client.so libvcos.so libbcm_host.so GLESv2 EGL ncurses ${OpenCV_LIBS})
+
+add_executable(picam picam.cpp camera.cpp cameracontrol.cpp graphics.cpp lodepng.cpp tracking_toolbox.cpp)
